<resources>
    <string name="app_name">HotHead</string>

    <string name="action_menu_home">Home</string>
    <string name="action_menu_my_profile">My Profile</string>
    <string name="action_menu_search">Search</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_help">Help</string>
    <string name="action_menu_add_review">Add review</string>
    <string name="action_menu_refresh">Refresh</string>

    <string name="prompt_email_address">Email</string>
    <string name="prompt_screen_name">Screen Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_hot_sauce_name">Hot Sauce Name</string>
    <string name="prompt_hot_sauce_description">Description</string>
    <string name="prompt_hot_sauce_company">Company</string>
    <string name="prompt_hot_sauce_shu">Scoville Heat Rating</string>
    <string name="prompt_hot_sauce_hotness">Relative Hotness Rating</string>
    <string name="prompt_hot_sauce_base_pepper">Pepper(s)</string>
    <string name="prompt_hot_sauce_comments">Comments?</string>

    <string name="text_register_button_save">Save</string>
    <string name="text_register_button_register">Register</string>
    <string name="text_add_review_button">Add Review</string>
    <string name="text_add_review_sauce">Add Sauce</string>
    <string name="text_register_facebook_button">Facebook</string>
    <string name="text_register_google_button">Google</string>
    <string name="text_user_name">User</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_placeholder">Enter Text here</string>
    <string name="text_test">This is new text</string>
    <string name="text_or_sign_up_with">Or Sign Up With</string>
    <string name="text_no_reviews">No reviews yet! Get started!</string>
    <string name="text_no_recommendations">Nothing here yet! You might be offline</string>
    <string name="text_no_data">No data</string>
    <string name="text_no_sauces_found">No sauces found</string>
    <string name="text_delete_user">Delete</string>
    <string name="text_delete_reviews">Delete Reviews</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_profile">Profile</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_log_in">Log in</string>
    <string name="text_click_to_review">Click to Review</string>
    <string name="text_your_review">Your review</string>
    <string name="text_no_bookmarks">No bookmarks yet! Get started!</string>
    <string name="text_recent_reviews">Recent Reviews</string>
    <string name="text_comment">Comment</string>
    <string name="text_blank_warning">Must not be blank</string>
    <string name="text_add_sauce">Can\'t find your sauce? Add it here</string>
    <string name="text_no_reviews_list">No reviews yet! Check back later or add one now!</string>
    <string name="text_login_first">You register or log in to do that.</string>
    <string name="text_comments">Comments</string>
    <string name="text_company_name">Company name</string>
    <string name="text_dash">-</string>
    <string name="text_sauce_name">Sauce Name</string>
    <string name="text_sauce_description">Sauce Description. This is a place holder to test for long strings and how they look in this space. We need to make sure they are pleasing to the eye.</string>
    <string name="text_pepper">pepper</string>
    <string name="text_hotness">hotness</string>
    <string name="text_shu">shu</string>
    <string name="text_bookmark">Bookmark</string>

    <string name="content_desc_search_icon">Search icon</string>
    <string name="content_desc_add_sauce_button">Add sauce button</string>
    <string name="content_desc_hot_sauce_icon">Hot sauce icon</string>
    <string name="content_desc_hot_head_icon">Hot Head Icon</string>

    <string name="link_privacy_policy">Privacy Policy</string>
    <string name="button_show_me">Show me!</string>
    <string name="button_share">Share</string>
    <string name="text_try_something_new">Try something new!</string>
    <string name="text_surprise_me">Surprise me!</string>
    <string name="text_recommended_sauces">Recommended Sauces</string>
    <string name="text_popular_sauces">Popular Sauces</string>
    <string name="text_search_by_heat_level">Search by Heat Level</string>
    <string name="connectionTimeOut">10000</string>
</resources>
