<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_item_empty"
    style="@style/SearchItem"
    android:gravity="center"
    android:padding="0dp"
    android:weightSum="90"
    android:layout_height="60dp"
    android:onClick="openAddSauce"
    android:background="@drawable/view_dark">

    <ImageView
        android:id="@+id/search_item_image"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="30"
        android:padding="2dp"
        android:contentDescription="@string/content_desc_hot_sauce_icon"
        android:src="@mipmap/hotsauce_clear" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/text_add_sauce" />
    </LinearLayout>

    <ImageView
        style="@style/FloatingButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="openAddSauce"
        android:contentDescription="@string/content_desc_add_sauce_button"
        android:src="@drawable/plus" />

</LinearLayout>
