<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/SearchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:translationZ="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/hotsauce_clear" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_name"
                            style="@style/Headline.TextBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="0dp"
                            android:text="@string/text_sauce_name" />

                        <TextView
                            android:id="@+id/key"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/detail_company_name"
                        style="@style/Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_company_name" />

                    <include layout="@layout/widget_rating" />

                    <TextView
                        android:id="@+id/detail_pepper"
                        style="@style/BlackText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pepper" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_hotness"
                            style="@style/GreyText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="5dp"
                            android:paddingStart="0dp"
                            android:text="@string/text_hotness" />

                        <LinearLayout
                            android:id="@+id/detail_shu_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <View
                                style="@style/Divider.Vert"
                                android:layout_margin="0dp" />

                            <TextView
                                android:id="@+id/detail_shu"
                                style="@style/GreyText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingEnd="0dp"
                                android:paddingStart="5dp"
                                android:text="@string/text_shu" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/detail_description"
                style="@style/BlackText.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/text_sauce_description" />

            <View
                style="@style/Divider"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="90"
                android:baselineAligned="false"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="90">

                <TextView
                    style="@style/FlatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:drawableStart="@android:drawable/star_off"
                    android:gravity="center"
                    android:onClick="addBookmark"
                    android:text="@string/text_bookmark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/your_review"
            style="@style/Detail"
            android:clickable="true"
            android:onClick="appendReviewView"
            android:translationZ="3dp">

            <TextView
                android:id="@+id/your_review_title"
                style="@style/Headline.TextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_click_to_review" />

            <include layout="@layout/widget_your_rating" />

        </LinearLayout>


        <LinearLayout
            style="@style/ActivityItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Headline.TextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_orange_yellow"
                android:text="@string/text_recent_reviews" />

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/detail_recent_reviews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/item_review_detail_empty" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>